--- a/index.html
+++ b/index.html
@@ -282,9 +282,10 @@
                         </div>
 
                         <div id="collapse_1" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-                            <div class="card-body">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/m5ovQXY1PSg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+                            <div class="card-body d-flex justify-content-center">
+                                <div class="embed-responsive embed-responsive-16by9 card" style="max-width: 500px; padding: 0;">
+                                    <iframe src="https://www.youtube.com/embed/m5ovQXY1PSg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -299,9 +300,10 @@
                         </div>
 
                         <div id="collapse_2" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                            <div class="card-body">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/RcNVxLmupGI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+                            <div class="card-body d-flex justify-content-center">
+                                <div class="embed-responsive embed-responsive-16by9 card" style="max-width: 500px; padding: 0;">
+                                    <iframe src="https://www.youtube.com/embed/RcNVxLmupGI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -316,9 +318,10 @@
                         </div>
 
                         <div id="collapse_3" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                            <div class="card-body">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/LyUh4azdfg8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+                            <div class="card-body d-flex justify-content-center">
+                                <div class="embed-responsive embed-responsive-16by9 card" style="max-width: 500px; padding: 0;">
+                                    <iframe src="https://www.youtube.com/embed/LyUh4azdfg8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -333,8 +336,10 @@
                         </div>
 
                         <div id="collapse_4" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                            <div class="card-body">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/FBhdaC_L5YM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <div class="card-body d-flex justify-content-center">
+                                <div class="embed-responsive embed-responsive-16by9 card" style="max-width: 500px; padding: 0;">
+                                    <iframe src="https://www.youtube.com/embed/FBhdaC_L5YM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -349,8 +354,10 @@
                         </div>
 
                         <div id="collapse_5" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                            <div class="card-body">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/MGTGWeUI0_Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <div class="card-body d-flex justify-content-center">
+                                <div class="embed-responsive embed-responsive-16by9 card" style="max-width: 500px; padding: 0;">
+                                    <iframe src="https://www.youtube.com/embed/MGTGWeUI0_Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -365,8 +372,10 @@
                         </div>
 
                         <div id="collapse_6" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                            <div class="card-body">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/wtiF6ECrHt8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <div class="card-body d-flex justify-content-center">
+                                <div class="embed-responsive embed-responsive-16by9 card" style="max-width: 500px; padding: 0;">
+                                    <iframe src="https://www.youtube.com/embed/wtiF6ECrHt8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -381,8 +390,10 @@
                         </div>
 
                         <div id="collapse_7" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                            <div class="card-body">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/RlORHX5GRbU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <div class="card-body d-flex justify-content-center">
+                                <div class="embed-responsive embed-responsive-16by9 card" style="max-width: 500px; padding: 0;">
+                                    <iframe src="https://www.youtube.com/embed/RlORHX5GRbU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -397,8 +408,10 @@
                         </div>
 
                         <div id="collapse_8" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                            <div class="card-body">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/mFYWGyH2HQM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <div class="card-body d-flex justify-content-center">
+                                <div class="embed-responsive embed-responsive-16by9 card" style="max-width: 500px; padding: 0;">
+                                    <iframe src="https://www.youtube.com/embed/mFYWGyH2HQM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -413,8 +426,10 @@
                         </div>
 
                         <div id="collapse_9" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                            <div class="card-body">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/fPh1FLHLteg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <div class="card-body d-flex justify-content-center">
+                                <div class="embed-responsive embed-responsive-16by9 card" style="max-width: 500px; padding: 0;">
+                                    <iframe src="https://www.youtube.com/embed/fPh1FLHLteg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -429,8 +444,10 @@
                         </div>
 
                         <div id="collapse_10" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                            <div class="card-body">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/ecn-l9O7Rwo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <div class="card-body d-flex justify-content-center">
+                                <div class="embed-responsive embed-responsive-16by9 card" style="max-width: 500px; padding: 0;">
+                                    <iframe src="https://www.youtube.com/embed/ecn-l9O7Rwo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -445,8 +462,10 @@
                         </div>
 
                         <div id="collapse_11" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                            <div class="card-body">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/ZBAdMJ4NN0M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <div class="card-body d-flex justify-content-center">
+                                <div class="embed-responsive embed-responsive-16by9 card" style="max-width: 500px; padding: 0;">
+                                    <iframe src="https://www.youtube.com/embed/ZBAdMJ4NN0M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -461,8 +480,10 @@
                         </div>
 
                         <div id="collapse_12" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                            <div class="card-body">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/l_n13qqo_g8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <div class="card-body d-flex justify-content-center">
+                                <div class="embed-responsive embed-responsive-16by9 card" style="max-width: 500px; padding: 0;">
+                                    <iframe src="https://www.youtube.com/embed/l_n13qqo_g8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
                             </div>
                         </div>
                     </div>
