--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <p class="undertitle">ОНЛАЙН КВЕСТ "ВЗРЫВАЕМ ТИКТОК"! <br> От Королевы Комедии @etto_julietta</p>
                     </div>
                     <div class="card">
-                        <p>5 Напишите полное описание Вашего марафона (рекомендуемый размер до 300 символов с пробелами). Этот Онлайн Квест для тех, кто: <br>
+                        <p> Этот Онлайн Квест для тех, кто: <br>
                             -Хочет больше тусить вместе и общаться, потому, что хочу со всеми пообщаться, но времени не хватает, а в квесте смогу больше времени уделить каждому и проводить закрытые прямые эфиры для участников. <br>
                             -Хочет раскрутить свои видео каналы в Tik Tok и др. <br>
                             -Хочет найти свою изюминку и понять, что снимать лично тебе <br>
@@ -463,7 +463,7 @@
 
                         <div id="collapse_12" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                             <div class="card-body d-flex justify-content-center">
-                                
+
                             </div>
                         </div>
                     </div>
