--- a/index.html
+++ b/index.html
@@ -70,32 +70,35 @@
                         <p class="undertitle">ОНЛАЙН КВЕСТ "ВЗРЫВАЕМ ТИКТОК"! <br> От Королевы Комедии @etto_julietta</p>
                     </div>
                     <div class="card">
-                        <p> Этот Онлайн Квест для тех, кто: <br>
-                            -Хочет больше тусить вместе и общаться, потому, что хочу со всеми пообщаться, но времени не хватает, а в квесте смогу больше времени уделить каждому и проводить закрытые прямые эфиры для участников. <br>
-                            -Хочет раскрутить свои видео каналы в Tik Tok и др. <br>
-                            -Хочет найти свою изюминку и понять, что снимать лично тебе <br>
-                            -Хочет научиться снимать и выкладывать видео каждый день <br>
-                            -Хочет открыть в себе Блогера <br>
-                            -Хочет создавать оригинальные идеи <br>
-                            -Хочет за 6-12 месяцев набрать 100тыс+ Подписчиков <br>
-                            -Хочет научится показывать себя на видео и выступать <br>
-                            -Для тех кто хочет попасть в закрытое сообщество блогеров. <br>
-                            -Для тех кто заскучал и хочет веселиться слудеющие 30 дней ВМЕСТЕ СО МНОЙ! <br>
-                            -Для участников школы Блогеров.<br><br>
-                        </p>
-                        <p>
-                            <p>Идем к цели + 10.000 подписчиков за 30 дней<br><br></p>
-                            <p>✅Каждый день в течение 30 дней я показываю, что и как снимаю и выкладываю я!<br><br></p>
-                            <p>✅Каждый день Новые Квестовые Задания, которые помогут вести твой канал и создавать топовый контент!<br><br></p>
-                            <p>✅ Снимаем вместе то, что залетает в Реки!<br><br></p>
-                            <p>✅Получаешь бесплатно уроки из моего нового курса по ТикТок, стоимостью 990 рос. рублей.<br><br></p>
-                            <p>✅Даю обратную связь вам по вашим видео, отвечаю на все вопросы.<br><br></p>
-                            <p>✅ Самые активные получают бесплатный пиар, дуэты в моем аккаунте + личное общение и консультации по продвижению твоего канала.<br><br></p>
-                            <p>✅ Я выкладываю видео самых активных в свой ТикТок, Инста. Сейчас я работаю над созданием платформы где вы сами сможете размещать свои видео и Я и другие участники Квеста будут давать обратную связь, что и как улучшить,
-                                чтобы твои видео нравились большому количеству людей.<br><br></p>
-                            <p>✅Вместе идем к цели +10000 подписчиков в месяц<br><br></p>
-                            <p>✅Каждый день обсуждаем в группе в комментариях, у кого что не получается, помогу найти твою изюминку и раскрутиться лично тебе.<br><br></p>
-                        </p>
+                        <div class="textblock">
+                            <p> Этот Онлайн Квест для тех, кто: <br>
+                                -Хочет больше тусить вместе и общаться, потому, что хочу со всеми пообщаться, но времени не хватает, а в квесте смогу больше времени уделить каждому и проводить закрытые прямые эфиры для участников. <br>
+                                -Хочет раскрутить свои видео каналы в Tik Tok и др. <br>
+                                -Хочет найти свою изюминку и понять, что снимать лично тебе <br>
+                                -Хочет научиться снимать и выкладывать видео каждый день <br>
+                                -Хочет открыть в себе Блогера <br>
+                                -Хочет создавать оригинальные идеи <br>
+                                -Хочет за 6-12 месяцев набрать 100тыс+ Подписчиков <br>
+                                -Хочет научится показывать себя на видео и выступать <br>
+                                -Для тех кто хочет попасть в закрытое сообщество блогеров. <br>
+                                -Для тех кто заскучал и хочет веселиться слудеющие 30 дней ВМЕСТЕ СО МНОЙ! <br>
+                                -Для участников школы Блогеров.<br><br>
+                            </p>
+                            <p>
+                                <p>Идем к цели + 10.000 подписчиков за 30 дней<br><br></p>
+                                <p>✅Каждый день в течение 30 дней я показываю, что и как снимаю и выкладываю я!<br><br></p>
+                                <p>✅Каждый день Новые Квестовые Задания, которые помогут вести твой канал и создавать топовый контент!<br><br></p>
+                                <p>✅ Снимаем вместе то, что залетает в Реки!<br><br></p>
+                                <p>✅Получаешь бесплатно уроки из моего нового курса по ТикТок, стоимостью 990 рос. рублей.<br><br></p>
+                                <p>✅Даю обратную связь вам по вашим видео, отвечаю на все вопросы.<br><br></p>
+                                <p>✅ Самые активные получают бесплатный пиар, дуэты в моем аккаунте + личное общение и консультации по продвижению твоего канала.<br><br></p>
+                                <p>✅ Я выкладываю видео самых активных в свой ТикТок, Инста. Сейчас я работаю над созданием платформы где вы сами сможете размещать свои видео и Я и другие участники Квеста будут давать обратную связь, что и как
+                                    улучшить,
+                                    чтобы твои видео нравились большому количеству людей.<br><br></p>
+                                <p>✅Вместе идем к цели +10000 подписчиков в месяц<br><br></p>
+                                <p>✅Каждый день обсуждаем в группе в комментариях, у кого что не получается, помогу найти твою изюминку и раскрутиться лично тебе.<br><br></p>
+                            </p>
+                        </div>
                         <div class="card__footer">
                             <span class="price">799 российских рублей</span>
                             <a href="" class="btn btn-success">Принять участие</a>
